--- a/src/translation/es.json
+++ b/src/translation/es.json
@@ -12,5 +12,6 @@
     "Published":"Publicado",
     "Nothing but the truth":"Nada más que la verdad",
     "Page not found":"Página no encontrada",
-    "Back to homepage...":"Regresar a la página principal..."
+    "Back to homepage...":"Regresar a la página principal...",
+    "Search":"Buscar"
 }
