--- a/src/translation/es.json
+++ b/src/translation/es.json
@@ -13,5 +13,22 @@
     "Nothing but the truth":"Nada más que la verdad",
     "Page not found":"Página no encontrada",
     "Back to homepage...":"Regresar a la página principal...",
-    "Search":"Buscar"
+    "Search":"Buscar",
+    "capitalism":"capitalismo",
+    "communism":"comunismo",
+    "cultural":"cultura",
+    "economical":"economía",
+    "investigation":"investigación",
+    "laws":"leyes",
+    "news":"noticias",
+    "opinion":"opinión",
+    "policial":"policial",
+    "political":"política",
+    "report":"reporte",
+    "social":"social",
+    "socialism":"socialismo",
+    "sport":"deporte",
+    "technological":"tecnología",
+    "Admin":"Administrar",
+    "Submit":"Enviar"
 }
