dark mode and transl

--- a/src/translation/es.json
+++ b/src/translation/es.json
@@ -45,6 +45,9 @@
   "Clear form": "Borrar formulario",
   "Clear tags": "Borrar etiquetas",
   "Clear image, title & heading": "Borrar imagen, título y encabezado",
-  "Clear Text Body": "Borrar Texto"
+  "Clear Text Body": "Borrar Texto",
+  "Dark mode":"Modo oscuro",
+  "On": "Encendido",
+  "Off":"Apagado"
 }
 
