--- a/src/translation/es.json
+++ b/src/translation/es.json
@@ -2,10 +2,12 @@
   "About": "Acerca",
   "Add": "Crear",
   "All": "Todos",
+  "All tags":"Todas las etiquetas",
   "Content": "Contenido",
   "Contact": "Contacto",
   "World's": "Mundial",
   "World":"Mundo",
+  "usa":"e.e.u.u",
   "world":"mundo",
   "More tags": "Mas etiquetas",
   "Close": "Cerrar",
@@ -18,6 +20,8 @@
   "Search": "Buscar",
   "capitalism": "capitalismo",
   "communism": "comunismo",
+  "feminism": "feminismo",
+  "racism": "racismo",
   "cultural": "cultura",
   "economical": "economía",
   "investigation": "investigación",
@@ -37,6 +41,8 @@
   "Email": "Correo Electrónico",
   "Password": "Contraseña",
   "Tags": "Etiquetas",
+  "tags": "etiquetas",
+  "tag":"etiqueta",
   "Publish": "Publicar",
   "Title": "Título",
   "Image": "Imágen",
