--- a/src/translation/es.json
+++ b/src/translation/es.json
@@ -72,5 +72,9 @@
   "Select \"install App\". Notice that sometimes appears as \"Add to home screen\"": "Seleccione \"Installar aplicación\". Note que en ocaciones aparece como \"incorporar a pantalla principal\"",
   "Install or accept the suggested name in the popup modal": "Instale o acepte el nombre sugerido por el pop de diálogo",
   "(Optional) Add the app to the mobile home screen": "(Opcional) Adicione la app a la pantalla principal",
-  "Enjoy the App from your mobile!": "Disfrute de la aplicacion desde su telefono!"
+  "Enjoy the App from your mobile!": "Disfrute de la aplicacion desde su telefono!",
+  "contact us": "contáctanos",
+  "Production and direction": "Producción y dirección",
+  "Contents": "Redacción",
+  "Web app creation and maintenance": "Creacion y mantenimiento de la aplicación web"
 }
