settings translation and css update

--- a/src/translation/es.json
+++ b/src/translation/es.json
@@ -76,5 +76,6 @@
   "contact us": "contáctanos",
   "Production and direction": "Producción y dirección",
   "Contents": "Redacción",
-  "Web app creation and maintenance": "Creacion y mantenimiento de la aplicación web"
+  "Web app creation and maintenance": "Creacion y mantenimiento de la aplicación web",
+  "settings": "configuración"
 }
