--- a/src/translation/es.json
+++ b/src/translation/es.json
@@ -79,5 +79,10 @@
   "Web app creation and maintenance": "Creacion y mantenimiento de la aplicación web",
   "settings": "configuración",
   "Copied": "Copiado",
-  "Copy URL": "Copiar URL"
+  "Copy URL": "Copiar URL",
+  "study": "estudio",
+  "europe": "europa",
+  "war": "guerra",
+  "republicans": "republicanos",
+  "democrats": "demócratas"
 }
