about page text and tranlation

--- a/src/translation/es.json
+++ b/src/translation/es.json
@@ -84,5 +84,19 @@
   "europe": "europa",
   "war": "guerra",
   "republicans": "republicanos",
-  "democrats": "demócratas"
+  "democrats": "demócratas",
+  "Make sure to read our": "Asegúrate de leer nuestros",
+  "Terms & Conditions": "Términos & Condiciones",
+  "Want to install this app?": "¿Quieres instalar esta aplicación?",
+  "Who we are?": "¿Quiénes somos?",
+  "What we want?": "¿Qué queremos?",
+  "Our goal is to build an online space where impartial and unbiased news content is promoted, fostering critical thinking and informed reflection. Our purpose is to provide a platform where individuals can access a diverse range of opinions, analysis, and perspectives on relevant topics": "Aspiramos a construir un espacio en línea donde se promueva contenido noticioso imparcial y libre de sesgo político, fomentando el pensamiento crítico y la reflexión informada. Nuestro propósito es ofrecer una plataforma en la que los individuos puedan acceder a una gama diversa de opiniones, análisis y perspectivas sobre temas relevantes",
+  "How we will get it?": "¿Cómo lo conseguiremos?",
+  "By facilitating access to balanced and objective information from diverse perspectives, with the intention of establishing a platform where people can explore and analyze current socio-political affairs": "Facilitando el acceso a información equilibrada y objetiva desde diversas perspectivas, con la intención de establecer una plataforma donde las personas puedan explorar y analizar la actualidad socio-política",
+  "How you can help?": "¿Cómo puedes ayudar?",
+  "The easiest way to help us is by following, liking and subscribing in some or all of the social media plattforms": "La forma más sencilla de ayudarnos es siguiéndonos, dando like y suscribiéndote en algunas o todas nuestras plataformas de redes sociales",
+  "You could provide topics and info for us to include in our program": "Puedes proporcionarnos temas e información para incluir en nuestro programa",
+  "You could order merchandise from us as a way to support": "Podrías ordenar mercancía de nosotros como una forma de apoyar",
+  "You can order adverrtisment service from us": "Puedes ordenar nuestro servicio de publicidad",
+  "Or you could just donate": "O simplemente podrías hacer una donación"
 }
