accept denied modal and translations

--- a/src/translation/es.json
+++ b/src/translation/es.json
@@ -98,5 +98,9 @@
   "You could provide topics and info for us to include in our program": "Puedes proporcionarnos temas e información para incluir en nuestro programa",
   "You could order merchandise from us as a way to support": "Podrías ordenar mercancía de nosotros como una forma de apoyar",
   "You can order adverrtisment service from us": "Puedes ordenar nuestro servicio de publicidad",
-  "Or you could just donate": "O simplemente podrías hacer una donación"
+  "Or you could just donate": "O simplemente podrías hacer una donación",
+  "Welcome": "Bienvenido(a)",
+  "We do not use cookies, nor collect any data from our users": "Nosotros no utilizamos cookies ni recopilamos ningún dato de nuestros usuarios",
+  "By clicking the Accept button you are accepting our": "Al hacer clic en el botón Aceptar, estás aceptando nuestros",
+  "To": "A"
 }
